# CMake-Workshop

./: .gitignore  CMakeLists.txt  README.md  hello.cpp
some_lib/: CMakeLists.txt  some_lib.cpp  some_lib.hpp
